# wyhash-rs

./: .gitignore  .tarpaulin.toml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  release.toml
.github/workflows/: build.yml  clippy.yml  coverage.yml  docs.yml  rustfmt.yml  test.yml
benches/: bench.rs
comparison/: Cargo.toml  README.md  build.rs
comparison/benches/: bench.rs
comparison/original/: CMakeLists.txt  lib.c  lib_final3.c  lib_final3_32bit_mum.c  lib_v1.c
comparison/src/: lib.rs
comparison/tests/: back_to_back_hash.rs  back_to_back_prng.rs
examples/: function.rs  hasher_trait.rs  no_std.rs  rng_traits.rs  std_hasher.rs
original/: CMakeLists.txt  README.md  main.cpp
src/: functions.rs  lib.rs  std_impls.rs  trait_impls.rs  traits.rs  wyhash.rs
src/final3/: functions.rs  mod.rs  traits.rs
src/v1/: functions.rs  mod.rs  traits.rs
tests/: back_to_back.rs  back_to_back_hash.rs  back_to_back_prng.rs  integration.rs
wyhash/: Cargo.toml  LICENSE-MIT  README.md
wyhash/benches/: bench.rs
wyhash/examples/: hasher_trait.rs
wyhash/src/: lib.rs
wyhash/src/final3/: functions.rs  traits.rs
