[package]
name = "wyhash"
version = "0.5.0" # remember to update html_root_url
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/wyhash-rs"
license = "MIT OR Apache-2.0"
description = "Rust implementation of the WyHash fast portable non-cryptographic hashing algorithm and random number generator."
readme = "README.md"
keywords = ["hash", "hasher", "wyhash", "rng", "random"]
categories = ["algorithms", "no-std"]
homepage = "https://github.com/eldruin/wyhash-rs"
documentation = "https://docs.rs/wyhash"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-APACHE",
]
edition = "2018"

[badges]
coveralls = { repository = "eldruin/wyhash-rs", branch = "master", service = "github" }

[dependencies]
rand_core = "0.6"

[profile.release]
lto = true


