[package]
name = "wyhash"
version = "0.5.0" # remember to update html_root_url
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/wyhash-rs"
license = "MIT OR Apache-2.0"
description = "Rust implementation of the WyHash fast portable non-cryptographic hashing algorithm and random number generator."
readme = "README.md"
keywords = ["hash", "hasher", "wyhash", "rng", "random"]
categories = ["algorithms", "no-std"]
homepage = "https://github.com/eldruin/wyhash-rs"
documentation = "https://docs.rs/wyhash"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
]
edition = "2018"

[dependencies]
rand_core = "0.9"

[dev-dependencies]
metrohash = "1"
fnv = "1"
twox-hash = "2.1"

[features]
mum32bit = []

[workspace]
members = ["comparison"]

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
